--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,11 +1,7 @@
-
-
-  
 #login-form{
   border: .5px solid;
   width:100%;
   background-color:rgba(53, 52, 52, 0.349);
-  
   margin:auto;
   margin-top:100px;
 }
@@ -77,7 +73,8 @@ letter-spacing: 0px;
 
 
 
-@media only screen and (min-width: 426px) {
+@media only screen and (min-width: 768px) {
+  /* anything over 425px*/
 
   #login-form{
   
