--- a/client/src/components/ManageGroupModal/ManageGroupModal.css
+++ b/client/src/components/ManageGroupModal/ManageGroupModal.css
@@ -50,13 +50,39 @@ font-family:"bignoodletoo";
 padding-bottom:5px;
 }
 
-.gm-submit{
-  color:green;
+
+
+.group-delete-btn{
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px solid rgb(207, 206, 206);
   width:80px;
+  height:20px;
+  font-size:16px;
+  margin:10px;
+  text-align:center;
+ color:rgb(255, 0, 0);
+ background-color:white;
 }
 
-.gm-submit:hover{
-  background-color:rgb(231, 229, 229);
-  color:green;
+.group-delete-btn:hover {
+  color: #f89090;
+  background-color:white;
+}
+
+.group-update-btn{
   width:80px;
+  height:20px;
+  font-size:16px;
+  margin:10px;
+  cursor: pointer;
+  text-align:center;
+ color:orange;
+ background-color:white;
+}
+
+.group-update-btn:hover {
+  color:rgb(245, 212, 153);
+  background-color:white;
+ 
 }
