--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,5 +1,3 @@
-
-
 #settings-btn{
     background-color:rgb(250, 142, 0);
     border: none;
@@ -20,22 +18,22 @@
 }
 
 
-.pmodal-update-btn{
+.pmodal-update-btn1{
   font-family:"bignoodletoo";
 letter-spacing: 1px;
 border-radius:4px;
 width:80px;
-color:rgb(19, 163, 62);
+color:rgb(250, 142, 0);
 height:30px;
 background-color:rgb(255, 255, 255);
 }
 
-.pmodal-update-btn:hover{
+.pmodal-update-btn1:hover{
   font-family:"bignoodletoo";
 letter-spacing: 1px;
 border-radius:4px;
 width:80px;
-color:rgb(37, 179, 44);
+color:rgb(248, 180, 91);
 background-color:rgb(245, 244, 244);
 border: 1px solid rgb(185, 185, 185);
 height:30px;
