--- a/client/src/pages/Messages/Messages.css
+++ b/client/src/pages/Messages/Messages.css
@@ -32,6 +32,7 @@ button{
 background-color:rgb(127, 173, 243);
 color:white;
 margin-bottom:20px;
+float:center;
 }
 
 button:hover{
@@ -60,7 +61,7 @@ button:hover{
       text-align:center;
       font-size:30px;
       margin-bottom:50px;
-    margin-top:60px;
+    margin-top:100px;
       
     }
   
