--- a/client/src/pages/Search/Search.css
+++ b/client/src/pages/Search/Search.css
@@ -10,6 +10,7 @@
 #search-groups {
   width: 100%;
   margin: 0 auto;
+
 }
 
 select.form-control:not([size]):not([multiple]) {
@@ -20,44 +21,32 @@ h4 {
   color: rgb(250, 246, 246);
   font-family: "bignoodletoo";
   letter-spacing: 2px;
-  margin: auto;
-  font-size: 50px;
+  margin:auto;
+  font-size: 30px;
   margin-bottom: 50px;
   margin-top: 100px;
   text-align: center;
 }
 
+
+
 #text-test {
   text-align: center;
 }
 
-@media only screen and (max-width: 425px) {
-  #search-results {
-    border: 2px;
-    padding-bottom: 150px;
-    width: 100%;
-    margin: auto;
-  }
 
-  #search-groups {
-    width: 100%;
-    margin: auto;
-  }
-
+@media only screen and (min-width: 425px) {
+  
   h4 {
     color: rgb(250, 246, 246);
     font-family: "bignoodletoo";
     letter-spacing: 2px;
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 50px;
-    margin-top: 60px;
-  }
-
-  h5 {
+    margin: auto;
     font-size: 50px;
-    color: rgb(250, 246, 246);
+    margin-bottom: 50px;
+    margin-top: 100px;
     text-align: center;
-    margin-bottom: 30px;
   }
+ 
+
 }
