--- a/client/src/components/SearchBtn/SearchBtn.css
+++ b/client/src/components/SearchBtn/SearchBtn.css
@@ -12,6 +12,8 @@
   margin: 5px;
   font-family:"bignoodletoo";
   letter-spacing: 2px;
+  margin-top:40px;
+  margin-bottom:30px;
 }
 
 .search-btn:hover {
